RESOLVED FIXED 233976
Assert isMainThread() in hasValidAverageCharWidth
https://bugs.webkit.org/show_bug.cgi?id=233976
Summary Assert isMainThread() in hasValidAverageCharWidth
Cameron McCormack (:heycam)
Reported 2021-12-07 22:19:43 PST
.
Attachments
Patch (1.43 KB, patch)
2021-12-07 22:21 PST, Cameron McCormack (:heycam)
mmaxfield: review+
Patch (1.14 KB, patch)
2022-07-19 15:48 PDT, Matt Woodrow
no flags
Cameron McCormack (:heycam)
Comment 1 2021-12-07 22:21:18 PST
Myles C. Maxfield
Comment 2 2021-12-08 21:05:08 PST
Comment on attachment 446298 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=446298&action=review > Source/WebCore/platform/graphics/FontCascade.cpp:344 > + ASSERT(isMainThread()); This is fine, but why not any of the other functions in FontCascade?
Cameron McCormack (:heycam)
Comment 3 2021-12-08 21:09:04 PST
(In reply to Myles C. Maxfield from comment #2) > This is fine, but why not any of the other functions in FontCascade? Because most FontCascade functions are called from worker threads too.
Radar WebKit Bug Importer
Comment 4 2021-12-14 22:20:17 PST
Matt Woodrow
Comment 5 2022-07-19 15:48:06 PDT
EWS
Comment 6 2022-07-19 21:58:47 PDT
Committed 252634@main (4c3c8c892f78): <https://commits.webkit.org/252634@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 461021 [details].
Note You need to log in before you can comment on or make changes to this bug.