Assert isMainThread() in hasValidAverageCharWidth https://bugs.webkit.org/show_bug.cgi?id=233976

Reviewed by Myles C. Maxfield.

This function is only called from render objects, and so does not need
to be made thread safe for OffscreenCanvas.

* platform/graphics/FontCascade.cpp:
(WebCore::FontCascade::hasValidAverageCharWidth const):

Canonical link: https://commits.webkit.org/252634@main